# imcl

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
imcl_lib/: CMakeLists.txt
imcl_lib/include/: imcl.h  imcl_types.h
imcl_lib/src/: imcl.cpp
